# GPULabSkeleton

./: CMakeLists.txt  main.cpp  shader.cpp
BSP/: BSP.cpp  BSP.h  BSPFace.cpp  BSPFace.h  BSPHeader.cpp  BSPHeader.h  BSPLump.cpp  BSPLump.h  BSPVertex.cpp  BSPVertex.h
shaders/: fragment.glsl  geometry.glsl  points.fragment.glsl  points.vertex.glsl  vertex.glsl
